# advent-of-code

./: .gitignore
2025/c/: CMakeLists.txt
2025/c/include/: day01.h
2025/c/src/: day01.c  main.c
